--- a/CareerFlowBackend1/pom.xml
+++ b/CareerFlowBackend1/pom.xml
@@ -56,6 +56,17 @@
             <artifactId>java-jwt</artifactId>
             <version>4.3.0</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
